Use an optimized map for compound tag
See the class comments for details on design decisions