@@ -28,7 +28,6 @@ import org.enginehub.linbus.tree.impl.LinTagReader;
 import org.jspecify.annotations.Nullable;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -47,7 +46,7 @@ public final class LinCompoundTag extends LinTag<Map<String, ? extends LinTag<?>
      *
      * <p>
      * The map <em>will not</em> be copied using {@link Map#copyOf(Map)}, as that fails to preserve order. Instead, the
-     * map will be copied using {@link LinkedHashMap#LinkedHashMap(Map)}.
+     * map will be copied into an immutable, insertion-ordered map.
      * </p>
      *
      * @param value the value
@@ -159,7 +158,7 @@ public final class LinCompoundTag extends LinTag<Map<String, ? extends LinTag<?>
          * @return this builder
          */
         public Builder putCompound(String name, Map<String, ? extends LinTag<?>> value) {
-            return put(name, new LinCompoundTag(copyImmutable(value), true));
+            return put(name, of(value));
         }
 
         /**
@@ -290,7 +289,16 @@ public final class LinCompoundTag extends LinTag<Map<String, ? extends LinTag<?>
     private static Map<String, LinTag<?>> copyImmutable(
         Map<String, ? extends LinTag<?>> value
     ) {
-        return Collections.unmodifiableMap(new LinkedHashMap<>(value));
+        if (value.isEmpty()) {
+            // We would like to use the EMPTY constant whenever the map is empty
+            // so we should never reach this.
+            throw new AssertionError("Should not be called with an empty map");
+        }
+        if (value.size() == 1) {
+            // Not order retaining, but for a single element it doesn't matter.
+            return Map.copyOf(value);
+        }
+        return new CompoundValueMap(value);
     }
 
     private final Map<String, LinTag<?>> value;
@@ -436,7 +444,7 @@ public final class LinCompoundTag extends LinTag<Map<String, ? extends LinTag<?>
         }
         LinkedHashMap<String, LinTag<?>> newMap = new LinkedHashMap<>(this.value);
         newMap.put(name, value);
-        return new LinCompoundTag(Collections.unmodifiableMap(newMap), false);
+        return new LinCompoundTag(copyImmutable(newMap), false);
     }
 
     /**
